# routes/web.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\ProfileController;
 use App\Http\Controllers\ProductController;
 use App\Http\Controllers\AdminController;
+use App\Http\Controllers\CategoryController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthenticatedSessionController;
 
@@ -20,6 +21,9 @@ Route::middleware(['auth', 'admin'])->group(function () {
 
     Route::get('/admin/products/create', [ProductController::class, 'create'])->name('admin.products.create');
     Route::post('/admin/products', [ProductController::class, 'store'])->name('admin.products.store');
+
+    Route::get('/categories/{category}', [CategoryController::class, 'showProducts'])->name('categories.products');
+
 });
 
 Route::get('/sanctum/csrf-cookie', function () {
